--- a/scss/abstracts/_mixin.scss
+++ b/scss/abstracts/_mixin.scss
@@ -19,3 +19,26 @@
       rgba($color-course-3-d, 0.85)
    );
 }
+
+@mixin respond($breakpoint) {
+   @if $breakpoint == "mobile" {
+      @media (max-width: 739px) {
+         @content;
+      }
+   }
+   @if $breakpoint == "tablet" {
+      @media (max-width: 1023px) {
+         @content;
+      }
+   }
+   @if $breakpoint == "tablet-land" {
+      @media (max-width: 1200px) {
+         @content;
+      }
+   }
+   @if $breakpoint == "wide-desktop" {
+      @media (min-width: 1800px) {
+         @content;
+      }
+   }
+}
