--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,12 +10,18 @@
    position: relative;
    height: 95vh;
    clip-path: ellipse(67% 79% at 50% 13%);
+   @include respond(mobile) {
+      height: 70vh;
+   }
    &__logo-box {
       top: 20px;
       left: 16px;
       position: absolute;
       &--img {
-         height: 70px;
+         height: 7rem;
+         @include respond(mobile) {
+            height: 6.5rem;
+         }
       }
    }
    &__text-box {
@@ -24,6 +30,9 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
+      @include respond(mobile) {
+         top: 46%;
+      }
       &--primary {
          color: $color-white;
          text-transform: uppercase;
@@ -31,20 +40,36 @@
             &--main {
                font-size: 6.4rem;
                font-weight: 700;
-               letter-spacing: 15px;
+               letter-spacing: 1.5rem;
                animation: FadeInLeft linear 1.6s;
+
+               @include respond(mobile) {
+                  letter-spacing: 1rem;
+                  font-size: 5rem;
+               }
+               @include respond(tablet) {
+                  font-size: 6rem;
+               }
             }
             &--sub {
                font-size: 2.4rem;
-               letter-spacing: 16px;
+               letter-spacing: 1.6rem;
                animation: FadeInRight linear 1.6s;
-               margin-bottom: 60px;
+               margin-bottom: 6rem;
+               @include respond(mobile) {
+                  letter-spacing: 0.5rem;
+                  font-size: 2.2rem;
+               }
             }
          }
       }
       &--btn {
          animation: FadeInBottom linear 1.5s 0.75s;
          animation-fill-mode: backwards;
+         @include respond(mobile) {
+            font-size: 1.6rem;
+            padding: 1.5rem 4rem;
+         }
       }
    }
 }
