--- a/style/main.css
+++ b/style/main.css
@@ -145,7 +145,25 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 62.5%;
+}
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media (max-width: 1023px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (min-width: 1800px) {
+  html {
+    font-size: 75%;
+  }
 }
 
 * {
@@ -164,6 +182,12 @@ body {
   padding: 30px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+@media (max-width: 1200px) {
+  body {
+    padding: 0;
+  }
 }
 
 .l-o-1 {
@@ -751,6 +775,12 @@ body {
           clip-path: ellipse(67% 79% at 50% 13%);
 }
 
+@media (max-width: 739px) {
+  .header {
+    height: 70vh;
+  }
+}
+
 .header__logo-box {
   top: 20px;
   left: 16px;
@@ -758,7 +788,13 @@ body {
 }
 
 .header__logo-box--img {
-  height: 70px;
+  height: 7rem;
+}
+
+@media (max-width: 739px) {
+  .header__logo-box--img {
+    height: 6.5rem;
+  }
 }
 
 .header__text-box {
@@ -770,6 +806,12 @@ body {
   text-align: center;
 }
 
+@media (max-width: 739px) {
+  .header__text-box {
+    top: 46%;
+  }
+}
+
 .header__text-box--primary {
   color: #fff;
   text-transform: uppercase;
@@ -778,17 +820,37 @@ body {
 .header__text-box--primary > .text-box__primary--main {
   font-size: 6.4rem;
   font-weight: 700;
-  letter-spacing: 15px;
+  letter-spacing: 1.5rem;
   -webkit-animation: FadeInLeft linear 1.6s;
           animation: FadeInLeft linear 1.6s;
 }
 
+@media (max-width: 739px) {
+  .header__text-box--primary > .text-box__primary--main {
+    letter-spacing: 1rem;
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 1023px) {
+  .header__text-box--primary > .text-box__primary--main {
+    font-size: 6rem;
+  }
+}
+
 .header__text-box--primary > .text-box__primary--sub {
   font-size: 2.4rem;
-  letter-spacing: 16px;
+  letter-spacing: 1.6rem;
   -webkit-animation: FadeInRight linear 1.6s;
           animation: FadeInRight linear 1.6s;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
+}
+
+@media (max-width: 739px) {
+  .header__text-box--primary > .text-box__primary--sub {
+    letter-spacing: 0.5rem;
+    font-size: 2.2rem;
+  }
 }
 
 .header__text-box--btn {
@@ -796,6 +858,13 @@ body {
           animation: FadeInBottom linear 1.5s 0.75s;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards;
+}
+
+@media (max-width: 739px) {
+  .header__text-box--btn {
+    font-size: 1.6rem;
+    padding: 1.5rem 4rem;
+  }
 }
 
 /* End: Heading */
